--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,124 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+.pio/build/project.checksum
+.pio/build/cubecell_board/idedata.json
+.pio/libdeps/cubecell_board/ArduinoLog/.gitignore
+.pio/libdeps/cubecell_board/ArduinoLog/.piopm
+.pio/libdeps/cubecell_board/ArduinoLog/.travis.yml
+.pio/libdeps/cubecell_board/ArduinoLog/ArduinoLog.cpp
+.pio/libdeps/cubecell_board/ArduinoLog/ArduinoLog.h
+.pio/libdeps/cubecell_board/ArduinoLog/keywords.txt
+.pio/libdeps/cubecell_board/ArduinoLog/library.json
+.pio/libdeps/cubecell_board/ArduinoLog/library.properties
+.pio/libdeps/cubecell_board/ArduinoLog/LICENSE.md
+.pio/libdeps/cubecell_board/ArduinoLog/README.md
+.pio/libdeps/cubecell_board/ArduinoLog/examples/Log-advanced/Log-advanced.ino
+.pio/libdeps/cubecell_board/ArduinoLog/examples/Log-basic/Log-basic.ino
+.vscode/c_cpp_properties.json
+.vscode/extensions.json
+.vscode/launch.json
+.pio/build/cubecell_board/.sconsign37.dblite
+.pio/build/cubecell_board/firmware.cyacd
+.pio/build/cubecell_board/firmware.elf
+.pio/build/cubecell_board/firmware.hex
+.pio/build/cubecell_board/libFrameworkArduino.a
+.pio/build/cubecell_board/libFrameworkArduinoVariant.a
+.pio/build/cubecell_board/FrameworkArduino/basic.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/main.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/wiring_shift.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/WMath.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/SPI/SPI.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/Serial/HardwareSerial.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/Wire/Wire.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/board/board.c.o
+.pio/build/cubecell_board/FrameworkArduino/board/src/asr_board.c.o
+.pio/build/cubecell_board/FrameworkArduino/board/src/gpio-board.c.o
+.pio/build/cubecell_board/FrameworkArduino/board/src/gpio.c.o
+.pio/build/cubecell_board/FrameworkArduino/board/src/spi-board.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/ADC_SAR_Seq_INT.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/ADC_SAR_Seq_intClock.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/ADC_SAR_Seq_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/ADC_SAR_Seq_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/ADC_SAR_Seq.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_1_I2C_INT.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_1_I2C_MASTER.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_1_I2C.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_1_SCB_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_1_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_I2C_INT.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_I2C_MASTER.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_I2C.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_SCB_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/I2C_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/irq.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/Print.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM1_ISR.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM1_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM1.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM2_ISR.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM2_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/PWM2.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/stdlib_noniso.c.o
+.pio/build/cubecell_board/FrameworkArduino/cores/Stream.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/cores/WString.cpp.o
+.pio/build/cubecell_board/FrameworkArduino/device/sx126x/sx126x.c.o
+.pio/build/cubecell_board/FrameworkArduino/lora/system/delay.c.o
+.pio/build/cubecell_board/FrameworkArduino/lora/system/low_power.c.o
+.pio/build/cubecell_board/FrameworkArduino/lora/system/utilities.c.o
+.pio/build/cubecell_board/FrameworkArduino/lora/system/crypto/aes.c.o
+.pio/build/cubecell_board/FrameworkArduino/lora/system/crypto/cmac.c.o
+.pio/build/cubecell_board/FrameworkArduino/port/aos_port.c.o
+.pio/build/cubecell_board/FrameworkArduino/port/flash_port.c.o
+.pio/build/cubecell_board/FrameworkArduino/port/port_s.S.o
+.pio/build/cubecell_board/FrameworkArduino/port/printf.c.o
+.pio/build/cubecell_board/FrameworkArduino/port/uart_port.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/Bootloadable_1.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/Cm0plusStart.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/cy_em_eeprom.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/CyBootAsmGnu.S.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/cybootloader.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/CyDMA.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/CyFlash.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/CyLFClk.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/CyLib.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/cymetadata.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/cyPm.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/cyutils.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/RTC.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_1_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_1_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_1_SPI_UART.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_1_SPI.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_1.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_2_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_2_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_2_SPI_UART.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/SPI_2_SPI.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_BOOT.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_rx_wake_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_rx_wake.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_RX_WAKEUP_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_SCB_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_SPI_UART_INT.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_SPI_UART.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_tx_PM.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_tx.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_UART_BOOT.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_1_UART.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_2_SCB_IRQ.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_2_SCBCLK.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_2_SPI_UART_INT.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_2_SPI_UART.c.o
+.pio/build/cubecell_board/FrameworkArduino/projects/PSoC4/UART_2_UART.c.o
+.pio/build/cubecell_board/lib8cc/libArduinoLog.a
+.pio/build/cubecell_board/lib8cc/ArduinoLog/ArduinoLog.cpp.o
+.pio/build/cubecell_board/lib965/libBasics.a
+.pio/build/cubecell_board/lib965/Basics/softSerial.cpp.o
+.pio/build/cubecell_board/lib9f9/libOneWire.a
+.pio/build/cubecell_board/lib9f9/OneWire/OneWire.cpp.o
+.pio/build/cubecell_board/src/main.cpp.o
+.pio/build/cubecell_board/src/SdsDustSensor.cpp.o
+.pio/build/cubecell_board/src/SdsDustSensorResults.cpp.o
